--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-.bloop
-.metals
+.bloop/
+.metals/
+.vscode/
+project/project
+project/metals.sbt
 
 # Created by https://www.gitignore.io/api/sbt,scala,eclipse
 
